<resources>
    <string name="app_name">Activity1</string>
    <string name="nct">nct</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="match_parent">MATCH PARENT</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="select_your_bias">select your bias!</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="address">Address:</string>
</resources>