<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="40dp">

    <ImageView
        android:src="@drawable/orang"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginBottom="20dp"
        android:importantForAccessibility="no" />

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:textSize="20sp"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            tools:ignore="TextFields" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/enter_your_phone_number"
            android:inputType="phone"
            android:importantForAutofill="no"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingEnd="16dp"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/enter_your_address"
            android:importantForAutofill="no"
            android:inputType="text"/>
    </TableRow>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="50dp"/>


</TableLayout>
